--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_home">首頁</string>
     <string name="title_favorite">收藏</string>
     <string name="title_member">會員</string>
+    <string name="title_exit_app">Exit</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
